<resources>
    <string name="app_name">AksaraApp</string>
    <string name="app_logo">app_logo</string>
    <string name="aksara">aksara</string>
    <string name="preserve_culture">preserve culture</string>

    <!-- Form login and register   -->
    <string name="enter_full_name">Enter your full name</string>
    <string name="enter_username">Enter your username</string>
    <string name="enter_password">Enter your password</string>
    <string name="enter_email">Enter your email</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="register">Register</string>

    <string name="forgot_password">Forgot Password?</string>
    <string name="message_to_login">Already have an account?</string>
    <string name="message_to_register">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_with">Or sign up with</string>
    <string name="continue_with">Or continue with</string>

    <!--  Login option  -->
    <string name="login_with_google">"Login with Google "</string>
    <string name="login_with_apple">Login with Apple</string>
    <string name="login_with_facebook">Login with Facebook</string>

    <!--  Register option  -->
    <string name="register_with_facebook">Register with Facebook</string>
    <string name="register_with_apple">Register with Apple</string>
    <string name="register_with_google">Register with Google</string>
    <string name="onboarding_image">Onboarding Image</string>
    <string name="ob_message1">Unlocking the Power of Words!</string>
    <string name="ob_message2">Bridging Language Barriers with the Power of Visual Translation</string>
    <string name="home">Home</string>
    <string name="translate">Translate</string>
    <string name="course">Course</string>
    <string name="cart">Cart</string>
    <string name="message">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="batak">Batak</string>
    <string name="tv_user">Hai Mrs. Jessica Kohl 👋</string>
    <string name="get_your_voucher">Get your voucher</string>
    <string name="voucher">Voucher</string>
    <string name="category_class">Category Class</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="read_more">Read More</string>

</resources>