<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".ui.onBoarding.OnBoardingActivity">

    <ImageView
        android:id="@+id/lv_logo"
        android:layout_width="185dp"
        android:layout_height="90dp"
        android:src="@drawable/app_logo_horizontal"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        />


    <ImageView
        android:id="@+id/pic_onboarding1"
        android:layout_width="320dp"
        android:layout_height="320dp"
        android:src="@drawable/onboarding_pic1"
        android:contentDescription="@string/onboarding_image"
        app:layout_constraintTop_toBottomOf="@+id/lv_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="42dp"
        />

    <ImageView
        android:layout_height="320dp"
        android:layout_width="320dp"
        android:contentDescription="@string/onboarding_image"
        android:src="@drawable/onboarding_pic2"
        app:layout_constraintTop_toTopOf="@+id/pic_onboarding1"
        app:layout_constraintEnd_toEndOf="@+id/pic_onboarding1"
        app:layout_constraintStart_toStartOf="@+id/pic_onboarding1"
        app:layout_constraintBottom_toBottomOf="@+id/pic_onboarding1"
        />

    <TextView
        android:id="@+id/tv_message1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pic_onboarding1"
        android:layout_marginTop="16dp"
        android:text="@string/ob_message1"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        android:layout_marginHorizontal="32dp"
        />

    <TextView
        android:id="@+id/tv_message2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tv_message1"
        android:text="@string/ob_message2"
        android:textAlignment="center"
        android:layout_marginHorizontal="54dp"
        android:fontFamily="@font/poppins_regular"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_message2"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="48dp"
        android:gravity="center"
        >
        <Button
            android:id="@+id/register_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:background="@drawable/button_stroke"
            app:backgroundTint="@color/light_coral"
            android:paddingHorizontal="16dp"
            />

        <Space
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/login_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:background="@drawable/button_stroke"
            android:textColor="@color/black"
            android:paddingHorizontal="16dp"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>